<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="Output Format">

	    <CheckBoxPreference 
			android:title="Detect Eyes Only"
			android:defaultValue="false" 
			android:summary="Face detect should return 'Eyes Only' Box"
			android:key="pref_eyes_only" />
	    
	    <EditTextPreference android:key="pref_out_fps"
		android:title="@string/pref_out_fps_title"
		android:summary="@string/pref_out_fps_summary"
		android:dialogTitle="@string/pref_out_fps_title"
		android:defaultValue="15"
		/>

	    <EditTextPreference android:key="pref_out_rate"
		android:title="@string/pref_out_rate_title"
		android:summary="@string/pref_out_rate_summary"
		android:dialogTitle="@string/pref_out_rate_title"
		android:defaultValue="300"
		
		/>
	    
	      <EditTextPreference android:key="pref_out_vwidth"
		android:title="@string/pref_out_vwidth_title"
		android:summary="@string/pref_out_vwidth_summary"
		android:dialogTitle="@string/pref_out_vwidth_title"
				android:defaultValue="480"
		
		/>
	      
	        <EditTextPreference android:key="pref_out_vheight"
		android:title="@string/pref_out_vheight_title"
		android:summary="@string/pref_out_vheight_summary"
		android:dialogTitle="@string/pref_out_vheight_title"
				android:defaultValue="320"
		
	
		/>
	    
	    <EditTextPreference android:key="pref_out_format"
		android:title="@string/pref_out_format_title"
		android:summary="@string/pref_out_format_summary"
		android:dialogTitle="@string/pref_out_format_title"
				android:defaultValue="3gp"
		
		/>
	    
	      <EditTextPreference android:key="pref_out_vcodec"
		android:title="@string/pref_out_vcodec_title"
		android:summary="@string/pref_out_vcodec_summary"
		android:dialogTitle="@string/pref_out_vcodec_title"
				android:defaultValue="libx264"
		/>
	      
	        <EditTextPreference android:key="pref_out_acodec"
		android:title="@string/pref_out_acodec_title"
		android:summary="@string/pref_out_acodec_summary"
		android:dialogTitle="@string/pref_out_acodec_title"
		android:defaultValue="copy"
		/>
	    	    
	</PreferenceCategory>
</PreferenceScreen>

