<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="#f4e9f7">
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/imgprefs_h1"
		android:textSize="42px"
		android:textColor="#443f3f" />
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/listRoot"
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:weightSum="1.0">
		<ScrollView
			android:layout_weight="0.65"
			android:layout_height="fill_parent"
			android:layout_width="0dip"
			android:id="@+id/leftPrefs">
		</ScrollView>
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:id="@+id/rightPrefs"
			android:orientation="vertical"
			android:layout_height="fill_parent"
			android:layout_width="0dip"
			android:layout_weight="0.35"
			android:weightSum="1.0">
			<Button
				android:id="@+id/prefsSaveButton"
				android:text="@string/imgprefs_save"
				android:textColor="#ffffff"
				android:textSize="22px"
				android:padding="10px"
				android:layout_marginBottom="5px"
				android:layout_width="fill_parent"
				android:layout_height="0dip"
				android:layout_weight="0.25"
				android:background="#443f3f" />
			<Button
				android:id="@+id/prefsUndoButton"
				android:text="@string/imgprefs_undo"
				android:textColor="#ffffff"
				android:textSize="22px"
				android:padding="10px"
				android:layout_marginBottom="5px"
				android:layout_width="fill_parent"
				android:layout_height="0dip"
				android:layout_weight="0.25"
				android:background="#443f3f" />
			<Button
				android:id="@+id/prefsEraseExifButton"
				android:text="@string/imgprefs_eraseexif"
				android:textColor="#ffffff"
				android:textSize="22px"
				android:padding="10px"
				android:layout_marginBottom="5px"
				android:layout_width="fill_parent"
				android:layout_height="0dip"
				android:layout_weight="0.25"
				android:background="#443f3f" />
			<Button
				android:id="@+id/prefsPanicButton"
				android:text="@string/imgprefs_panic"
				android:textColor="#ffffff"
				android:textSize="22px"
				android:padding="10px"
				android:layout_marginBottom="5px"
				android:layout_width="fill_parent"
				android:layout_height="0dip"
				android:layout_weight="0.25"
				android:background="#f42409" />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>