<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:id="@+id/frameRoot"
    android:background="#000000"
	>
  	
  	<VideoView 
  		android:id="@+id/SurfaceView" 
	  	android:layout_height="wrap_content" 
  		android:layout_width="match_parent"
  		android:layout_gravity="center"
  		/>
	<ImageView 
		android:id="@+id/VideoEditorImageView" 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		/>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_gravity="bottom"
        android:padding="3dp"
        android:background="#99FFFFFF"
		>
 		<LinearLayout
 			android:id="@+id/InnerLinearLayout"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:orientation="horizontal"
 			>
 			<ImageButton 
 				android:layout_width="wrap_content" 
 				android:id="@+id/PlayPauseImageButton" 
 				android:src="@android:drawable/ic_media_play" 
 				android:layout_height="wrap_content" 				
 				/>	
			<org.witness.obscuracam.video.InOutPlayheadSeekBar
				android:id="@+id/InOutPlayheadSeekBar" 
				android:layout_height="fill_parent" 
				android:layout_width="0dip" 
				android:layout_weight="1"
				android:gravity="center" 
				android:indeterminate="false" 
				android:indeterminateOnly="false" 
				android:secondaryProgress="0" 
				android:progressDrawable="@android:drawable/progress_horizontal"
				/>

	
	</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/pixelize"
                android:gravity="center_vertical|right"
                />
			<SeekBar
				android:id="@+id/seekbar_video_obscure"
				android:layout_width="100dp"
				android:layout_height="match_parent"
				android:max="128"

				/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/colorize"
                android:gravity="center_vertical|right"
                />
			<SeekBar
				android:id="@+id/seekbar_blur"
                android:layout_width="100dp"
				android:layout_height="match_parent"
				android:max="6"

				/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/mute"
				/>

			<CheckBox
				android:id="@+id/cb_audio_mute"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			>
			<ProgressBar
				android:layout_width="match_parent"
				android:layout_height="40dp"
				android:id="@+id/progress_spinner"
				android:visibility="gone"
				style="@style/Widget.AppCompat.ProgressBar.Horizontal"
				android:min="0"
				android:max="100"
				/>

		</LinearLayout>

	</LinearLayout>


</FrameLayout>
